@@ -39,6 +39,7 @@ import java.sql.SQLException;
 import java.util.Date;
 import java.util.Properties;
 
+import org.apache.commons.codec.binary.Base64;
 import org.dspace.app.didl.UUIDFactory;
 import org.dspace.content.Bitstream;
 import org.dspace.content.Bundle;
@@ -50,7 +51,6 @@ import org.dspace.core.Context;
 import org.dspace.search.HarvestedItemInfo;
 import org.dspace.storage.bitstore.BitstreamStorageManager;
 
-import sun.misc.BASE64Encoder;
 import ORG.oclc.oai.server.crosswalk.Crosswalk;
 import ORG.oclc.oai.server.verb.CannotDisseminateFormatException;
 import ORG.oclc.oai.server.verb.ServerVerb;
@@ -235,8 +235,7 @@ public class DIDLCrosswalk extends Crosswalk
                                     int size=bis.read(buffer);
                                     contextl.complete();
                                     
-                                    BASE64Encoder encoder=(BASE64Encoder) Class.forName("sun.misc.BASE64Encoder").newInstance();
-                                    String encoding = encoder.encodeBuffer(buffer);
+                                    String encoding = new String(Base64.encodeBase64(buffer), "ASCII");
                                     metadata.append(encoding);
                                 }
                                 catch (Exception ex)
